[feature] Switch from Java's G1 to Z Garbage Collector