@@ -297,9 +297,9 @@ docker run -m 600m …
 ```
 
 Lastly, this image uses a new garbage collection mechanism 
-[garbage first (G1)](https://docs.oracle.com/javase/9/gctuning/garbage-first-garbage-collector.htm#JSGCT-GUID-ED3AB6D3-FD9B-4447-9EDF-983ED2F7A573) `-XX:+UseG1GC` 
+[The Z Garbage Collector (https://docs.oracle.com/en/java/javase/11/gctuning/z-garbage-collector1.html)] `-XX:+UseZGC`
 and [string deduplication](http://openjdk.java.net/jeps/192) `-XX:+UseStringDeduplication` to improve performance.
 
 To disable or further tweak these features edit the relevant parts of the `Dockerfile`, or when running the image. 
 As always when using the latest and greatest, YMMV. 
-Feedback about real world experiences with this features in connection with eXist-db is very much welcome.
+Feedback about real world experiences with these features in connection with eXist-db is very much welcome.
